make linter happy

--- a/roles/manage_vpc_peering/tasks/accept.yaml
+++ b/roles/manage_vpc_peering/tasks/accept.yaml
@@ -12,10 +12,10 @@
           - "{{ vpc_peering_conn_id }}"
         region: "{{ region }}"
         profile: "{{ accepter_account_profile | default(omit) }}"
-      register: peering_info
+      register: manage_vpc_peering_peering_info
       retries: 3
       delay: 5
-      until: peering_info.vpc_peering_connections[0].vpc_peering_connection_id is defined
+      until: manage_vpc_peering_peering_info.vpc_peering_connections[0].vpc_peering_connection_id is defined
 
     - name: Accept VPC peering request
       community.aws.ec2_vpc_peer:
@@ -24,4 +24,4 @@
         peer_owner_id: "{{ accepter_vpc_account_id | default(omit) }}"
         profile: "{{ accepter_account_profile | default(omit) }}"
         state: accept
-      register: accept_peering_request
+      register: manage_vpc_peering_accept_peering_request
