--- a/tox.ini
+++ b/tox.ini
@@ -16,8 +16,10 @@ commands =
 
 [testenv:ansible-lint]
 deps =
-  ansible-lint>=6.7.0
-commands = ansible-lint --profile production --format pep8 --nocolor --strict --write {toxinidir}/playbooks {toxinidir}/roles {toxinidir}/tests
+  ansible-lint==6.16.0
+changedir = {toxinidir}
+commands = 
+  ansible-lint
 
 [testenv:linters]
 deps =
