--- a/roles/customized_ami/tasks/delete.yaml
+++ b/roles/customized_ami/tasks/delete.yaml
@@ -14,4 +14,4 @@
   with_items: "{{ customized_ami__existing_amis.images }}"
   when:
     - customized_ami__existing_amis.images | length > 0
-    - custom_ami_recreate_if_exists | bool
+    - (custom_ami_operation == 'create') | ternary(custom_ami_recreate_if_exists, 'true') | bool
