--- a/tests/integration/targets/test_backup_create_plan/defaults/main.yml
+++ b/tests/integration/targets/test_backup_create_plan/defaults/main.yml
@@ -1,2 +1,2 @@
 ---
-# defaults file for tests/integration/targets/test_backup_create_plan
+aws_security_token: '{{ security_token | default(omit) }}'
