--- a/tests/integration/targets/test_backup_select_resources/defaults/main.yml
+++ b/tests/integration/targets/test_backup_select_resources/defaults/main.yml
@@ -4,5 +4,5 @@ plan_name: "{{ resource_prefix }}-plan"
 selection_name: "{{ resource_prefix }}-selection"
 selection_two: "{{ resource_prefix }}-selection-2"
 test_iam_role_name: "{{ resource_prefix }}-iam-role"
-test_iam_role_name: "{{ resource_prefix }}-iam-role-2"
+test_iam_role_name_new: "{{ resource_prefix }}-iam-role-new"
 test_vault_name: "{{ resource_prefix }}-vault"
