--- a/roles/backup_create_plan/tasks/main.yaml
+++ b/roles/backup_create_plan/tasks/main.yaml
@@ -11,10 +11,9 @@
 
 - name: Run backup_create_plan_role
   module_defaults:
-    group/aws: "{{ aws_role_credentials }}"
+    group/aws: "{{ aws_setup_credentials__output }}"
   block:
-    - name: Create or update backup vault if provided
-      when: vault_name != "Default"
+    - name: Create or update backup vault
       block:
         - name: Create or update backup vault
           amazon.aws.backup_vault:
