--- a/tests/integration/targets/test_backup_select_resources/tasks/teardown.yml
+++ b/tests/integration/targets/test_backup_select_resources/tasks/teardown.yml
@@ -32,3 +32,11 @@
     wait: true
     wait_timeout: 30
   ignore_errors: true
+
+- name: Delete IAM role created during test
+  community.aws.iam_role:
+    name: "{{ test_iam_role_name_new }}"
+    state: absent
+    wait: true
+    wait_timeout: 30
+  ignore_errors: true
