Fix test_customized_ami - add missing RSA public and private ssh keys

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /tests/output/
 /tests/integration/inventory
 /changelogs/.plugin-cache.yaml
+tests/integration/cloud-config-*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
