--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -8,6 +8,7 @@ jobs:
     env:
       source: "./source"
       aws_dir: "./amazon_aws"
+      crypto_dir: "./community.crypto"
       ansible_version: "stable-2.14"
       python_version: "3.9"
     steps:
@@ -23,6 +24,7 @@ jobs:
           install_python_dependencies: false
           source_path: ${{ env.source }}
 
+      # checkout and install 'amazon.aws'
       - name: checkout ansible-collections/amazon.aws
         uses: ansible-network/github_actions/.github/actions/checkout_dependency@main
         with:
@@ -35,6 +37,20 @@ jobs:
         with:
           install_python_dependencies: true
           source_path: ${{ env.amazon_aws }}
+
+      # checkout and install 'community.crypto'
+      - name: checkout ansible-collections/community.crypto
+        uses: ansible-network/github_actions/.github/actions/checkout_dependency@main
+        with:
+          repository: ansible-collections/community.crypto
+          path: ${{ env.crypto_dir }}
+          ref: main
+
+      - name: install community.crypto collection
+        uses: ansible-network/github_actions/.github/actions/build_install_collection@main
+        with:
+          install_python_dependencies: false
+          source_path: ${{ env.crypto_dir }}
 
       - name: Create AWS/sts session credentials
         uses: ansible-network/github_actions/.github/actions/ansible_aws_test_provider@main
@@ -56,4 +72,4 @@ jobs:
           collection_path: ${{ steps.install-collection.outputs.collection_path }}
           python_version: ${{ env.python_version }}
           ansible_version: ${{ env.ansible_version }}
-          ansible_test_requirement_files: ''
+          ansible_test_requirement_files: 'test-requirements.txt'
