--- a/roles/manage_vpc_peering/tasks/create.yaml
+++ b/roles/manage_vpc_peering/tasks/create.yaml
@@ -27,7 +27,11 @@
       delay: 5
       until: manage_vpc_peering_peering_info.vpc_peering_connections[0].vpc_peering_connection_id is defined
 
-    - name: Accept local VPC peering request
+    - name: Wait for peering request to be created
+      ansible.builtin.pause:
+        seconds: 5
+
+    - name: Accept VPC peering request
       community.aws.ec2_vpc_peer:
         region: "{{ accepter_vpc_region | default(region, true) }}"
         peering_id: "{{ manage_vpc_peering_vpc_peering_request.peering_id }}"
@@ -36,7 +40,11 @@
         state: accept
       register: manage_vpc_peering_accept_peering_request
 
+    - name: Set fact for peering connection ID to use in playbook
+      ansible.builtin.set_fact:
+        peering_request_id: "{{ manage_vpc_peering_vpc_peering_request.peering_id }}"
+
     - name: Print peering connection request ID
       ansible.builtin.debug:
         msg:
-          - "Peering connection request ID: {{ manage_vpc_peering_vpc_peering_request.peering_id }}"
+          - "Peering connection request ID: {{ peering_request_id }}"
