--- a/tests/integration/targets/test_manage_vpc_peering/tasks/setup.yml
+++ b/tests/integration/targets/test_manage_vpc_peering/tasks/setup.yml
@@ -1,18 +1,21 @@
 ---
-- name: Create first VPC in us-east-2
+- name: Create first VPC in eu-central-1
   amazon.aws.ec2_vpc_net:
     cidr_block: "{{ test_vpc_cidr_1_1 }}"
     name: "{{ test_vpc_name_1_1 }}"
-  register: us-east-2-vpc-1
+    region: eu-central-1
+  register: eu_central_1_vpc_1
 
-- name: Create second VPC in us-east-2
+- name: Create second VPC in eu-central-1
   amazon.aws.ec2_vpc_net:
     cidr_block: "{{ test_vpc_cidr_1_2 }}"
     name: "{{ test_vpc_name_1_2 }}"
-  register: us-east-2-vpc-2
+    region: eu-central-1
+  register: eu_central_1_vpc_2
 
 - name: Create VPC in us-west-1
   amazon.aws.ec2_vpc_net:
     cidr_block: "{{ test_vpc_cidr_2_1 }}"
     name: "{{ test_vpc_name_2 }}"
-  register: us-west-1-vpc-1
+    region: us-west-1
+  register: us_west_1_vpc_1
