--- a/tests/integration/targets/test_manage_vpc_peering/tasks/teardown.yml
+++ b/tests/integration/targets/test_manage_vpc_peering/tasks/teardown.yml
@@ -1,21 +1,24 @@
 ---
-- name: Delete first VPC in us-east-2
+- name: Delete first VPC in eu-central-1
   amazon.aws.ec2_vpc_net:
     cidr_block: "{{ test_vpc_cidr_1_1 }}"
     name: "{{ test_vpc_name_1_1 }}"
     state: absent
-  register: us-east-2-vpc-1
+    region: eu-central-1
+  register: eu_central_1_vpc_1
 
-- name: Delete second VPC in us-east-2
+- name: Delete second VPC in eu-central-1
   amazon.aws.ec2_vpc_net:
     cidr_block: "{{ test_vpc_cidr_1_2 }}"
     name: "{{ test_vpc_name_1_2 }}"
     state: absent
-  register: us-east-2-vpc-2
+    region: eu-central-1
+  register: eu_central_1_vpc_2
 
 - name: Delete VPC in us-west-1
   amazon.aws.ec2_vpc_net:
     cidr_block: "{{ test_vpc_cidr_2_1 }}"
     name: "{{ test_vpc_name_2 }}"
     state: absent
-  register: us-west-1-vpc-1
+    region: us-west-1
+  register: us_west_1_vpc_1
